RESOLVED FIXED279088
[IFC] Incorrect vertical position of nested content with parent of 'vertical-align: top'
https://bugs.webkit.org/show_bug.cgi?id=279088
Summary [IFC] Incorrect vertical position of nested content with parent of 'vertical-...
alan
Reported 2024-09-03 15:52:29 PDT
ssia
Attachments
[fast-cq]Patch (3.78 KB, patch)
2024-09-03 15:58 PDT, alan
no flags
alan
Comment 1 2024-09-03 15:58:00 PDT
Created attachment 472429 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-04 06:16:49 PDT
Committed 283150@main (dd239c6f2e9e): <https://commits.webkit.org/283150@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472429 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-04 06:18:24 PDT
Note You need to log in before you can comment on or make changes to this bug.