[IFC] Incorrect vertical position of nested content with parent of 'vertical-align: top' https://bugs.webkit.org/show_bug.cgi?id=279088

Reviewed by Antti Koivisto.

When an inline box is not contentful (e.g. <span>this is contentful</span> <span><img></span> <- this is not) we are supposed to ignore its own
layout bounds metrics when computing top position (since it has no content that would use such geometry).

* LayoutTests/fast/inline/nested-vertical-alignment-with-top-and-line-height-expected.html: Added.
* LayoutTests/fast/inline/nested-vertical-alignment-with-top-and-line-height.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.cpp:
(WebCore::Layout::LineBoxVerticalAligner::alignInlineLevelBoxes const):

Canonical link: https://commits.webkit.org/283150@main